--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.3",
     "express-async-handler": "^1.2.0",
-    "mongoose": "^6.2.9"
+    "mongoose": "^6.2.9",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "colors": "^1.4.0",
